--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-function setup() {
-  createCanvas(1000, 800);
-   background("white");
-}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-
-function draw() {
-  
-  stroke ("#472780");
-  fill ("#00020C");
- 
-  
-  // console.log(mouseIsPressed);
-  
-  if (mouseIsPressed){
-  circle (mouseX, mouseY, 20, 35);
-  }
-}
+  </head>
+  <body>
+    <main>
+    </main>
+    <script src="sketch.js"></script>
+  </body>
+</html>
